test/spec_vectors/load/fail/module_25.wat
(module (memory 1) (func $load32_u_i64 (i64.load32_u (i32.const 0))))